post-phd update.

--- a/bib/gray.bib.html
+++ b/bib/gray.bib.html
@@ -15,13 +15,16 @@ code {
 @preamble{ " \newcommand{\noop}[1]{} " } % a do-nothing command that serves a purpose
 
 @article{ThomasSentis2019TAC,
-  title={Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification},
-  author={Thomas, Gray Cortright and Sentis, Luis}, 
+  title={Quadric Inclusion Programs: an LMI Approach to $\mathcal{H}_\infty$-Model Identification},
+  author={Thomas, Gray Cortright and Sentis, Luis},
+  journal={IEEE Transactions on Automatic Control},
+  volume={64},
+  number={10},
+  pages={4229--4236},
   year={2019},
   publisher={IEEE},
   doi={10.1109/TAC.2019.2897886},
-  url={http://dx.doi.org/10.1109/TAC.2019.2897886},
-  journal={IEEE Transactions on Automatic Control (Early Access)}
+  url={http://dx.doi.org/10.1109/TAC.2019.2897886}
 }
 
 </code></div>
