--- a/publications.html
+++ b/publications.html
@@ -56,43 +56,69 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, and L. Sentis, "Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification," IEEE Transactions on Automatic Control (Early Access), Feb. 2019, doi: 10.1109/TAC.2019.2897886 <a href="https://ieeexplore.ieee.org/document/8636188">[IEEE]</a><a href="https://codeocean.com/capsule/7861079/tree/v1">[CodeOcean]</a><a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis2019TAC">[.bib]</a>
+<b>G. C. Thomas</b>, and L. Sentis, "Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification," <i>IEEE Transactions on Automatic Control,</i> 64, no. 10 (2019): 4229-4236. <a href="https://doi.org/10.1109/TAC.2019.2897886">[doi]</a><a href="https://ieeexplore.ieee.org/document/8636188">[IEEE]</a><a href="https://codeocean.com/capsule/7861079/tree/v1">[CodeOcean]</a><a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis2019TAC">[.bib]</a>
 </p>
 
 <p>
-<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Shaping the Compliance of Series Elastic Joints," Submitted to IEEE Transactions on Mechatronics <b>[ArXiv waiting on  NASA release procedures]</b>
+<b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissoneau, B. He, J. James, N. Paine, and L. Sentis, "An Amplification Shaping Framework for Exoskeletal Human Strength Augmentation," <i>Submitted to IEEE Transactions on Robotics</i>
 </p>
 
 <p>
-K. Isik, <b>G. C. Thomas</b>, and L. Sentis, "A Fixed Structure Gain Selection Strategy for High Impedance Series Elastic Actuator Behavior," J. Dynamic Systems, Measurement, and Control., vol. 141, no. 2, Oct. 2018, doi: 10.1115/1.4041449 <a href="http://dynamicsystems.asmedigitalcollection.asme.org/article.aspx?articleid=2702914">[Link]</a><a href="bib/gray.bib.html#IsikThomasSentis2018JDSMC">[.bib]</a>
+B. He, H. Huang, <b>G. C. Thomas</b>, and L. Sentis, "A Complex Stiffness Human Impedance Model with Customizable Exoskeleton Control," <i>Submitted to IEEE Transactions on Neural Systems and Rehabilitation Engineering</i>.
 </p>
 
 <p>
-D. Kim, Y. Zhao, <b>G. C. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," IEEE Trans. Robot., vol. 32, no. 6, pp. 1362-1379, Dec. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC-Video 2016]</a><a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[Link]</a><a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a><a href="bib/gray.bib.html#KimEA2016TRO">[.bib]</a>
+<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Phase-Relaxed-Passive Full State Feedback Gain Limits for Series Elastic Actuators," <i>Submitted to IEEE Transactions on Mechatronics</i>
+</p>
+
+<p>
+K. Isik, <b>G. C. Thomas</b>, and L. Sentis, "A Fixed Structure Gain Selection Strategy for High Impedance Series Elastic Actuator Behavior," <i> Journal of Dynamic Systems, Measurement, and Control,</i> 141, no. 2 (2018). <a href="https://doi.org/10.1115/1.4041449">[doi]</a><a href="http://dynamicsystems.asmedigitalcollection.asme.org/article.aspx?articleid=2702914">[ASME]</a><a href="bib/gray.bib.html#IsikThomasSentis2018JDSMC">[.bib]</a>
+</p>
+
+<p>
+D. Kim, Y. Zhao, <b>G. C. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," <i>IEEE Transactions on Robotics,</i> 32, no. 6 (2016): 1362-1379. [Finalist, Best WBC Paper 2016][Finalist, Best WBC-Video 2016]<a href="https://doi.org/10.1109/TRO.2016.2597314">[doi]</a><a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[IEEE]</a><a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a><a href="bib/gray.bib.html#KimEA2016TRO">[.bib]</a>
 </p>
 <p>
-T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. E. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," Int. J. Humanoid Robot., 13, 1650007, Mar. 2016. <a href="http://humanoids2017.loria.fr/index.html%3Fp=338.html">[Winner, IJHR 2016 Best Paper Awards]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[Link]</a><a href="bib/gray.bib.html#KoolenEA2016IJHR">[.bib]</a>
+T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. E. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," <i>International Journal of Humanoid Robotics</i>, 13, no. 01 (2016): 1650007. <a href="http://humanoids2017.loria.fr/index.html%3Fp=338.html">[Winner, IJHR 2016 Best Paper Awards]</a>[Finalist, Best WBC Paper 2016]<a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[IJHR]</a><a href="bib/gray.bib.html#KoolenEA2016IJHR">[.bib]</a>
 </p>
 
 
 <h3>Conference</h3>
 
 <p>
-<b>G. C. Thomas</b>, J. M. Coholich, and L. Sentis, "Compliance Shaping for Control of Strength Amplification Exoskeletons with Elastic Cuffs," accepted at <i>The IEEE/ASME International Conference on Advanced Intelligent Mechatronics</i>,  Hong Kong, China, 2019 
-<a href="https://arxiv.org/abs/1903.09673">[ArXiv]</a> 
+<b>G. C. Thomas</b>, J. M. Coholich, and L. Sentis. "Compliance Shaping for Control of Strength Amplification Exoskeletons with Elastic Cuffs." In <i>The 2019 IEEE/ASME International Conference on Advanced Intelligent Mechatronics</i>, Hong Kong, China, pp. 1199-1206. IEEE, 2019.
+<a href="https://ieeexplore.ieee.org/document/8868484">[IEEE]</a>
 <a href="bib/gray.bib.html#ThomasCoholichSentis2019pre">[.bib]</a>
+<a href="https://arxiv.org/abs/1903.09673">[ArXiv]</a>
 </p>
 
 <p>
-B. He, H. Huang, <b>G. C. Thomas</b>, and L. Sentis, "Complex Stiffness Model of Physical Human–Robot Interaction: Implications for Control of Performance Augmentation Exoskeletons," submitted to <i>The 2019 IEEE/RSJ International Conference on Intelligent Robots and Systems</i>,  Macau, China, 2019
-<a href="https://arxiv.org/abs/1903.00704">[ArXiv]</a> 
+R. Medrano, <b>G. C. Thomas</b>, and E. Rouse. "Methods for Measuring the Just Noticeable Difference for Variable Stimuli: Implications for Perception of Metabolic Rate with Exoskeleton Assistance." To appear in <i>The 8th IEEE RAS/EMBS International Conference on Biomedical Robotics & Biomechatronics</i>, New York, NY. IEEE, 2020.
+</p>
+
+<p>
+B. He, <b>G. C. Thomas</b>, and L. Sentis. "Robust Estimator-Based Safety Verification: A Vector Norm Approach." To appear in <i>The 2020 American Control Conference</i>, Denver, CO. IEEE, 2020.
+<a href="https://arxiv.org/abs/1910.02317">[ArXiv]</a>
+</p>
+
+<p>
+H. Huang, H. Cappel, <b>G. C. Thomas</b>, and L. Sentis. "Adaptive Compliance Shaping with Human Impedance Estimation." To appear in <i>The 2020 American Control Conference</i>, Denver, CO. IEEE, 2020. 
+<a href="https://arxiv.org/abs/1910.12902">[ArXiv]</a>
+</p>
+
+<p>
+B. He, H. Huang, <b>G. C. Thomas</b>, and L. Sentis. "Complex Stiffness Model of Physical Human-Robot Interaction: Implications for Control of Performance Augmentation Exoskeletons." In <i>The 2019 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>,  Macau, China, pp. 6748-6755. IEEE, 2019.
+<a href="https://ieeexplore.ieee.org/document/8968005">[IEEE]</a>
+<a href="https://doi.org/10.1109/IROS40897.2019.8968005">[doi]</a>
 <a href="bib/gray.bib.html#HeHuangThomasSentis2019pre">[.bib]</a>
+<a href="https://arxiv.org/abs/1903.00704">[ArXiv]</a>
 </p>
 
 <p>
-B. He, <b>G. C. Thomas</b>, N. A. Paine, and L. Sentis, "Modeling and Loop Shaping of Single-Joint Amplification Exoskeleton with Contact Sensing and Series Elastic Actuation," accepted at <i>The American Control Conference</i>,  Philadelphia, PA, 2019 
-<a href="https://arxiv.org/abs/1809.10560">[ArXiv]</a> 
+B. He, <b>G. C. Thomas</b>, N. A. Paine, and L. Sentis. "Modeling and Loop Shaping of Single-Joint Amplification Exoskeleton with Contact Sensing and Series Elastic Actuation." In <i>The 2019 American Control Conference</i>,  Philadelphia, PA, pp. 4580-4587. IEEE, 2019.
+<a href="https://ieeexplore.ieee.org/abstract/document/8814421">[IEEE]</a>
 <a href="bib/gray.bib.html#HeThomasPaineSentis2019ACC">[.bib]</a>
+<a href="https://arxiv.org/abs/1809.10560">[ArXiv]</a> 
 </p>
 
 <p>
@@ -163,6 +189,11 @@ I. Olaru, C. Schmidt-Wetekam, N. Payton, <b>G. C. Thomas</b>, J. Godowski, J. Pr
 
 <h3>Poster</h3>
 
+
+<p>
+R. Medrano, <b>G. C. Thomas</b>, and E. Rouse, "Quantifying Perception of Metabolic Changes from Exoskeleton Assistance," at <i>Dynamic Walking</i>, May 2020 <a href="https://www.seas.upenn.edu/~posa/DynamicWalking2020/612-889-1-RV.pdf">[pdf]</a>
+</p>
+
 <p>
 <b>G. C. Thomas</b>, and L. Sentis, "Monte Carlo UQ for Control Systems With Convex Optimization" (Originally: "Identifying Bounded Uncertainty Models with Convex Optimization"), at <i>Uncertainty Quantification and Data-Driven Modeling</i>, Austin, Texas, 2017 <a href="http://uqpm2017.usacm.org/program">[conference]</a><a href="Preprints/ThomasSentis_UncertaintyQuantification2017.pdf">[pdf]</a>
 </p>
@@ -175,7 +206,7 @@ I. Olaru, C. Schmidt-Wetekam, N. Payton, <b>G. C. Thomas</b>, J. Godowski, J. Pr
 Y. Zhao, D. Kim, <b>G. C. Thomas</b>, and L. Sentis, "Hybrid Multi-Contact Dynamics for Wedge Jumping Locomotion Behaviors," in <i>Proceedings of the 18th International Conference on Hybrid Systems: Computation and Control</i>, 2015, doi: 10.1145/2728606.2728645 <a href="http://dl.acm.org/citation.cfm?id=2728645">[Link]</a>
 </p>
 <p>
-D.H. Kim, Y. Zhao, <b>G. C. Thomas</b>, and L. Sentis, "Towards Agility in Compliant Point-Foot Bipeds," at <i>Dynamic Walking</i>, June 2014
+D.H. Kim, Y. Zhao, <b>G. C. Thomas</b>, and L. Sentis, "Towards Agility in Compliant Point-Foot Bipeds," at <i>Dynamic Walking</i>, June 2014 <a href="https://dhkim0821.github.io/papers/DW14Abstract.pdf">[pdf]</a>
 </p>
 
 <h3>Other</h3>
