--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ document.location = "index.m.html";
 }
 //-->
 </script>
-<title>Gray Cortright Thomas</title>
-<meta name="description" content="Robotics Researcher, NASA Space Technology Fellow, and Ph.D. Candidate at the University of Texas at Austin">
+<title>Gray Cortright Thomas, PhD</title>
 
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -28,24 +27,26 @@ document.location = "index.m.html";
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Gray Cortright Thomas</h1>
+      <h1 class="title">Gray Cortright Thomas, PhD</h1>
       <!-- <h1 class="subtitle">Scholar and Roboticist</h1> -->
     </header>
     
     <div id="container">
       <div class="rmodule">
         <!-- <img src="https://avatars0.githubusercontent.com/u/4873017?v=3&s=460" width="300" height="300"> -->
-        <img src="images/gray300.jpg" width="230" height="230">
+        <img src="images/GrayInExo.png" width="230" height="230">
       </div>
       <!-- <p class="tagline">  -->
       <p class="tagline">
-        Robotic Control Scholar<br>
-        <a href="https://www.nasa.gov/feature/nstrf-2015">NASA Space Technology Fellow</a> 
-        <a href="https://www.nasa.gov/feature/controlling-robots-with-a-spring-in-their-step">"Controlling Robots with a Spring in Their Step"</a><br>
-        Ph.D. Candidate at <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a> with 
+        Postdoctoral Research Fellow, <a href="https://eecs.engin.umich.edu/">EECS</a> <br> Department, University of Michigan.<br>
+        With <a href="">Elliott Rouse's</a> <a href="https://neurobionics.engin.umich.edu/">Neurobionics Lab</a><br>and <a href="">Robert D. Gregg, IV's</a><br><a href="http://web.eecs.umich.edu/locolab/">Locomotor Control Systems Lab</a>.
+        <br>
+       <!--  Former <a href="https://www.nasa.gov/feature/nstrf-2015">NASA Space Technology Fellow</a> 
+        <a href="https://www.nasa.gov/feature/controlling-robots-with-a-spring-in-their-step">"Controlling Robots with a Spring in Their Step"</a><br> -->
+        PhD from <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a> with 
         <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis">Luis Sentis</a><br>
-        Formerly at <a href="http://robots.ihmc.us/">IHMC</a> with <a href="https://www.ihmc.us/groups/jpratt/">Jerry Pratt</a><br>
-        gray.c.thomas&#64;[gmail.com or utexas.edu]
+        <!-- Formerly at <a href="http://robots.ihmc.us/">IHMC</a> with <a href="https://www.ihmc.us/groups/jpratt/">Jerry Pratt</a><br> -->
+        gcthomas&#64;[umich.edu or ieee.org]
       </p>
       <div id="main" role="main">
         <div class="download-bar">
