--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@ document.location = "index.m.html";
         <img src="images/val.png" height="250"><br>
       </div> -->
       <ul>
-        <li><a href="#SEA">High Performance Control of Series Elastic Robots</a></li>
-        <li><a href="#Rao">Award Winner: Stability of Series Elastic Tendon-Driven Robotic Hands!</a></li>
+        <li><a href="#SEAEnergy">Designing Optimal Joint Springs for Energy Efficient Prosthetics</a></li>
+        <li><a href="#Sagit">Force-Feedback Control of a Lower-Body Exoskeleton</a></li>
+        <li><a href="#SEA">Impedance Limits for Series Elastic Actuators</a></li>
+        <li><a href="#Rao">Passivity Limits for Tendon-Driven Robotic Hand Control (Award Winner!)</a></li>
         <li><a href="#Exo">High Performance Force Control for Series Elastic Amplification Exoskeletons</a></li>
         <li><a href="#ID">Robust ℋ∞ Model-Set Identification</a></li>
         <li><a href="#Safe">Barrier Pairs and Safety Controllers</a></li>
-        <li><a href="#ILP">Trajectory Optimization for Series Elastic Robots</a></li>
+        <li><a href="#ILP">Using Series Springs to Exceed Motor Velocity Limits</a></li>
         <li><a href="#MC">Computationally Efficient Multi-Contact Locomotion Planning</a></li>
         <li><a href="#Hume">Award Finalist: Point Foot Biped Robot Hume Team!</a></li>
         <li><a href="#IHMC">DARPA VRC Winner: IJHR Paper Award Winner: Team IHMC!</a></li>
