website partial updates towards faculty application

--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@ document.location = "index.m.html";
   <div class="wrapper">
     <header>
       <h1 class="title">Gray Cortright Thomas, PhD</h1>
-      <!-- <h1 class="subtitle">Scholar and Roboticist</h1> -->
     </header>
     
     <div id="container">
+      <!-- <h1 class="subtitle">Aspiring Engineering Professor at the Scientific Intersection of Estimation, Control, and Wearable Robotics</h1> -->
       <div class="rmodule">
         <!-- <img src="https://avatars0.githubusercontent.com/u/4873017?v=3&s=460" width="300" height="300"> -->
-        <img src="images/GrayInExo.png" width="230" height="230">
+        <img src="images/GrayInExo.png" width="300" height="300">
       </div>
       <!-- <p class="tagline">  -->
       <p class="tagline">
-        Postdoctoral Research Fellow, <a href="https://eecs.engin.umich.edu/">EECS</a> <br> Department, University of Michigan.<br>
-        With <a href="">Elliott Rouse's</a> <a href="https://neurobionics.engin.umich.edu/">Neurobionics Lab</a><br>and <a href="">Robert D. Gregg, IV's</a><br><a href="http://web.eecs.umich.edu/locolab/">Locomotor Control Systems Lab</a>.
+      	Aspiring Engineering Professor at the Scientific Intersection of Estimation, Control, and Wearable Robotics. <br> <br>
+        Postdoctoral Research Fellow, <a href="https://eecs.engin.umich.edu/">EECS</a> <br> Department, University of Michigan<br>
+        with <a href="">Elliott Rouse's</a> <a href="https://neurobionics.engin.umich.edu/">Neurobionics Lab</a><br>and <a href="">Robert D. Gregg's</a><br><a href="http://web.eecs.umich.edu/locolab/">Locomotor Control Systems Lab</a>.
         <br>
        <!--  Former <a href="https://www.nasa.gov/feature/nstrf-2015">NASA Space Technology Fellow</a> 
         <a href="https://www.nasa.gov/feature/controlling-robots-with-a-spring-in-their-step">"Controlling Robots with a Spring in Their Step"</a><br> -->
-        PhD from <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a> with 
-        <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis">Luis Sentis</a><br>
+        (PhD with <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis">Luis Sentis</a> at <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a>)<br>
         <!-- Formerly at <a href="http://robots.ihmc.us/">IHMC</a> with <a href="https://www.ihmc.us/groups/jpratt/">Jerry Pratt</a><br> -->
         gcthomas&#64;[umich.edu or ieee.org]
       </p>
