--- a/oldindex.html
+++ b/oldindex.html
@@ -25,29 +25,51 @@
     </header>
     
     <div id="container">
-     <p class="tagline">
-        An aspiring engineering professor at the scientific intersection of estimation, control, and wearable robotics.
+      <!-- <h1 class="subtitle">Aspiring Engineering Professor at the Scientific Intersection of Estimation, Control, and Wearable Robotics</h1> -->
+      <!-- <div class="rmodule">
+        <img src="https://avatars0.githubusercontent.com/u/4873017?v=3&s=460" width="300" height="300">
+        <img src="images/GrayInExo.png" width="300" height="300">
+      </div> -->
+      <!-- <p class="tagline">  -->
+      <p class="tagline">
+      	An aspiring engineering professor at the scientific intersection of estimation, control, and wearable robotics.
+      </p>
+      <!-- <br> <br>
+        Postdoctoral Research Fellow, <a href="https://eecs.engin.umich.edu/">EECS</a> <br> Department, University of Michigan<br>
+        with <a href="">Elliott Rouse's</a> <a href="https://neurobionics.engin.umich.edu/">Neurobionics Lab</a><br>and <a href="">Robert D. Gregg's</a><br><a href="http://web.eecs.umich.edu/locolab/">Locomotor Control Systems Lab</a>.
+        <br> -->
+       <!--  Former <a href="https://www.nasa.gov/feature/nstrf-2015">NASA Space Technology Fellow</a> 
+        <a href="https://www.nasa.gov/feature/controlling-robots-with-a-spring-in-their-step">"Controlling Robots with a Spring in Their Step"</a><br> -->
+        <!-- (PhD with <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis">Luis Sentis</a> at <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a>)<br> -->
+        <!-- Formerly at <a href="http://robots.ihmc.us/">IHMC</a> with <a href="https://www.ihmc.us/groups/jpratt/">Jerry Pratt</a><br> -->
+        <!-- gcthomas&#64;[umich.edu or ieee.org] -->
       </p>
       <div id="main" role="main">
-        <p class="download-bar">
-
-            <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works">
-              <img src="images/scholar.png"> Scholar
-            </a> <a href="publications.html" >
-              <img src="images/gray.png" class="gray"> Publications
-            </a> <a href="https://www.linkedin.com/in/gray-thomas-a73b26a1?trk=hp-identity-name" >
-              <img src="images/linkedin.png" class="linkedin"> Linkedin
-            </a> <a href="http://sites.utexas.edu/hcrl/" >
-              <img src="images/hcrl.png" class="hcrl"> HCRL
-            </a> <a href="bio.html">
-              <img src="images/gray.png" class="gray"> Bio
-            </a> 
+        <div class="download-bar">
+          <div class="inner">
+            <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works" class="scholar">
+              Scholar
+            </a>
+            <a href="https://github.com/GrayThomas" class="code">
+              GitHub
+            </a>
+            <a href="https://www.linkedin.com/in/gray-thomas-a73b26a1?trk=hp-identity-name" class="linkedin">
+              Linkedin
+            </a>
+            <a href="http://sites.utexas.edu/hcrl/" class="hcrl">
+              HCRL
+            </a>
+            <a href="publications.html" class="gray">
+              Publications
+            </a>
+            <a href="bio.html" class="gray">
+              Bio
+            </a>
           <!-- <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis" class="sentis">
           Luis Sentis
         </a> -->
-
-      </p>
-            
+      </div>
+      <span class="blc"></span><span class="trc"></span>
     </div>
 
     <article class="markdown-body">
@@ -233,9 +255,13 @@
 
 </div> <!-- /container -->
 <footer>
+  <div class="owner">
 
+    <p><a href="https://github.com/GrayThomas" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4873017?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/GrayThomas">GrayThomas</a> on <a href="https://www.github.com">GitHub</a></p>
+
+  </div>
   <div class="creds">
-    <small>This page loosely based on a <a href="https://pages.github.com/">GitHub Pages</a> theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a>.</small>
+    <small>This page based on a <a href="https://pages.github.com/">GitHub Pages</a>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
   </div>
 </footer>
 </div>
