website improvements in formatting and bio.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
             <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works">
               <img src="images/scholar.png"> Scholar
+            </a> <a href="index.html" >
+              <img src="images/gray.png" class="gray"> Main
             </a> <a href="publications.html" >
               <img src="images/gray.png" class="gray"> Publications
             </a> <a href="https://www.linkedin.com/in/gray-thomas-a73b26a1?trk=hp-identity-name" >
@@ -42,16 +44,32 @@
             </a> <a href="bio.html">
               <img src="images/gray.png" class="gray"> Bio
             </a> 
-          <!-- <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis" class="sentis">
-          Luis Sentis
-        </a> -->
 
       </p>
             
     </div>
+    <div>
+      <img style="float: left; max-width:100%; padding-right: 10px" height="200" src="images/Gray300dpi.png"> 
+      <img style="float: right; max-width:100%; padding-left: 10px" height="200" src="images/HCFS-300dpi.png">
+      <span>
+        <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="500" src="images/UMEECS-300dpi.png">
+        <p class="affiliation">Postdoctoral Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
+      </span>
+    </div>
 
     <article class="markdown-body">
-      
+      <h1>Research Projects</h1>
+      <p style="text-align:justify; text-justify:inter-word">
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+        <a href="foo"><img width="350" src=images/example-project-300dpi.png></a>
+      </p>
+
 
 
       <!-- <div class="rmodule">
