--- a/publications.html
+++ b/publications.html
@@ -6,13 +6,10 @@
   <link rel="shortcut icon" href="images/favicon.ico">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/thomas2020.css" media="screen">
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Overpass|Yantramanav:900">
-  <link rel="stylesheet" href="stylesheets/sage.css" media="screen">
-<script type="text/javascript">
-if (screen.width <= 699) {
-document.location = "publications.m.html";
-} </script>
 <title>Gray Cortright Thomas's Publications</title>
 <meta name="description" content="Robotics Researcher, NASA Space Technology Fellow, and Graduate Student at the University of Texas at Austin">
 
@@ -24,32 +21,35 @@ document.location = "publications.m.html";
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Publications</h1>
+      <h1 class="title"><a class="Gray">Gray</a> C. Thomas, Ph.D.</h1>
     </header>
     
     <div id="container">
-
+     <p class="tagline">
+        An aspiring engineering professor at the scientific intersection of estimation, control, and wearable robotics.
+      </p>
       <div id="main" role="main">
-        <div class="download-bar">
-          <div class="inner">
-            <a href="index.html" class="gray">Main</a>
-            <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works" class="scholar">Scholar
-            </a>
-            <a href="https://github.com/GrayThomas" class="code">GitHub
-            </a>
-            <a href="https://www.linkedin.com/in/gray-thomas-a73b26a1?trk=hp-identity-name" class="linkedin">
-              Linkedin
-            </a>
-            <a href="http://sites.utexas.edu/hcrl/" class="hcrl">
-              HCRL
-            </a>
-            <a href="bio.html" class="gray">Bio</a>
-      </div>
-      <span class="blc"></span><span class="trc"></span>
-    </div>
+        <p class="download-bar">
 
+            <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works">
+              <img src="images/scholar.png"> Scholar
+            </a> <a href="index.html" >
+              <img src="images/gray.png" class="gray"> Main
+            </a> <a href="publications.html" >
+              <img src="images/gray.png" class="gray"> Publications
+            </a> <a href="https://www.linkedin.com/in/gray-thomas-a73b26a1?trk=hp-identity-name" >
+              <img src="images/linkedin.png" class="linkedin"> Linkedin
+            </a> <a href="http://sites.utexas.edu/hcrl/" >
+              <img src="images/hcrl.png" class="hcrl"> HCRL
+            </a> <a href="bio.html">
+              <img src="images/gray.png" class="gray"> Bio
+            </a> 
+
+      </p>
+
+    
     <article class="markdown-body">
-
+ <h1>Publications</h1>
 
 <!-- bib -->
 
@@ -226,19 +226,6 @@ N. Hobbs, R. Cherney, D. Grieneisen, J. Izraelevitz, <b>G. C. Thomas</b>, J. Nog
 
     </article>
   </div>
-
-</div> <!-- /containter -->
-<footer>
-  <div class="owner">
-
-    <p><a href="https://github.com/GrayThomas" class="avatar"><img src="https://avatars2.githubusercontent.com/u/4873017?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/GrayThomas">GrayThomas</a> on <a href="https://www.github.com">GitHub</a></p>
-
-  </div>
-  <div class="creds">
-    <small>This page based on a <a href="https://pages.github.com/">GitHub Pages</a>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-  </div>
-</footer>
-</div>
 
 
 </body>
