even more project tiles

--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
         <img width="350" src=images/GProject/GProject-NL-Springs.png>
         <a href="Preprints/ThomasEA2021TROpre.pdf"><img width="350" src=images/GProject/GProject-Sagit.png></a>
         <img width="350" src=images/GProject/GProject-TIPO.png>
-        <a href="https://ieeexplore.ieee.org/document/8636188"><img width="350" src=images/GProject/GProject-QIP.png></a>
-        <a href="Preprints/BrissonneauHeThomasSentis2020LCSSpre.pdf"><img width="350" src=images/GProject/GProject-PHD.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9224374"><img width="350" src=images/GProject/GProject-JND.png></a>
         <a href="Preprints/MedranoRouseThomas2020TMRBpre.pdf"><img width="350" src=images/GProject/GProject-JLR.png></a>
-        <a href="Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf"><img width="350" src=images/GProject/GProject-FSF-SEA.png></a>
+        <a href="Preprints/BrissonneauHeThomasSentis2020LCSSpre.pdf"><img width="350" src=images/GProject/GProject-PHD.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9147276"><img width="350" src=images/GProject/GProject-REBSV.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9147875"><img width="350" src=images/GProject/GProject-ACSHIE.png></a>
         <a href="https://ieeexplore.ieee.org/document/8868484"><img width="350" src=images/GProject/GProject-SAECC.png></a>
+        <a href="Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf"><img width="350" src=images/GProject/GProject-FSF-SEA.png></a>
+        <a href="https://ieeexplore.ieee.org/document/8636188"><img width="350" src=images/GProject/GProject-QIP.png></a>
+        <a href="https://doi.org/10.1115/1.4041449"><img width="350" src=images/GProject/GProject-GSSEA.png></a>
         <a href="http://ieeexplore.ieee.org/abstract/document/7736085/"><img width="350" src=images/GProject/GProject-HUME.png></a>
         <a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079"><img width="350" src=images/GProject/GProject-VRC.png></a>
-        <a href="https://ieeexplore.ieee.org/document/9224374"><img width="350" src=images/GProject/GProject-JND.png></a>
         <img width="350" src=images/GProject/G-BLANK.png>
         <img width="350" src=images/GProject/G-BLANK.png>
         <img width="350" src=images/GProject/G-BLANK.png>
