August 25 2021 update. Pre-princeton

--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
     <article class="markdown-body">
       <h1>Research Projects</h1>
       <p style="text-align:justify; text-justify:inter-word">
-        <img width="350" src=images/GProject/GProject-AES.png>
-        <img width="350" src=images/GProject/GProject-NL-Springs.png>
-        <a href="Preprints/ThomasEA2021TROpre.pdf"><img width="350" src=images/GProject/GProject-Sagit.png></a>
-        <img width="350" src=images/GProject/GProject-TIPO.png>
+        <a href="Preprints/ThomasGregg2021CDCpre.pdf"><img width="350" src=images/GProject/GProject-AES.png></a>
+        <a href="Preprints/ThomasRouse2021DWAbstract.pdf"><img width="350" src=images/GProject/GProject-NL-Springs.png></a>
+        <a href="Preprints/ThomasEA2021FrontiersPre.pdf"><img width="350" src=images/GProject/GProject-Sagit.png></a>
+        <a href="Preprints/ThomasLinDivekarNeslerGreggREHABPoster2020.pdf"><img width="350" src=images/GProject/GProject-TIPO.png></a>
         <a href="https://ieeexplore.ieee.org/document/9224374"><img width="350" src=images/GProject/GProject-JND.png></a>
-        <a href="Preprints/MedranoRouseThomas2020TMRBpre.pdf"><img width="350" src=images/GProject/GProject-JLR.png></a>
-        <a href="Preprints/BrissonneauHeThomasSentis2020LCSSpre.pdf"><img width="350" src=images/GProject/GProject-PHD.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9492308"><img width="350" src=images/GProject/GProject-JLR.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9291396"><img width="350" src=images/GProject/GProject-PHD.png></a>
         <a href="https://ieeexplore.ieee.org/document/9147875"><img width="350" src=images/GProject/GProject-ACSHIE.png></a>
         <a href="https://ieeexplore.ieee.org/document/9147276"><img width="350" src=images/GProject/GProject-REBSV.png></a>
         <a href="https://ieeexplore.ieee.org/document/8868484"><img width="350" src=images/GProject/GProject-SAECC.png></a>
-        <a href="Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf"><img width="350" src=images/GProject/GProject-FSF-SEA.png></a>
+        <a href="https://ieeexplore.ieee.org/document/9250572"><img width="350" src=images/GProject/GProject-FSF-SEA.png></a>
         <a href="https://ieeexplore.ieee.org/document/8636188"><img width="350" src=images/GProject/GProject-QIP.png></a>
         <a href="https://doi.org/10.1115/1.4041449"><img width="350" src=images/GProject/GProject-GSSEA.png></a>
         <a href="http://ieeexplore.ieee.org/abstract/document/7736085/"><img width="350" src=images/GProject/GProject-HUME.png></a>
