--- a/publications.html
+++ b/publications.html
@@ -56,29 +56,42 @@
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Phase-Relaxed-Passive Full State Feedback Gain Limits for Series Elastic Actuators," <i>IEEE Transactions on Mechatronics,</i> vo. 26, no. 1, pp. 586-591, Feb. 2020. <a href="https://ieeexplore.ieee.org/document/9250572">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf">[pdf]</a>
+<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Phase-Relaxed-Passive Full State Feedback Gain Limits for Series Elastic Actuators," <i>IEEE Transactions on Mechatronics,</i> vo. 26, no. 1, pp. 586-591, Feb. 2021. <a href="https://ieeexplore.ieee.org/document/9250572">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf">[pdf]</a>
 </p>
 
 <p>
-<b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissoneau, B. He, J. James, N. Paine, and L. Sentis, "An Amplification Shaping Framework for Exoskeletal Human Strength Augmentation," <i>Manuscript in Preparation</i> <a href="https://graythomas.github.io/Preprints/ThomasEA2021TROpre.pdf">[pdf]</a>
+R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics (Early Access)</i>, doi: 10.1109/TMRB.2021.3098920 <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a>
+</p> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
 </p>
 
 <p>
-R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design,” <i>Submitted to IEEE Transactions on Medical Robotics and Bionics</i> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a>
+<b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "An Amplification Shaping Framework for Exoskeletal Human Strength Augmentation," <i>(Under Review)</i> <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a>
 </p>
 
 <p>
-<b>G. C. Thomas</b>, and L. Sentis, "Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification," <i>IEEE Transactions on Automatic Control</i>, vol. 64, no. 10, pp. 4229-4236, Oct. 2019. <a href="https://doi.org/10.1109/TAC.2019.2897886">[doi]</a> <a href="https://ieeexplore.ieee.org/document/8636188">[IEEE]</a> <a href="https://codeocean.com/capsule/7861079/tree/v1">[CodeOcean]</a> <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a> <!-- <a href="bib/gray.bib.html#ThomasSentis2019TAC">[.bib]</a> -->
+R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, "Can humans perceive the metabolic benefit provided by augmentative exoskeletons?" <i>(Under Review)</i> <a href="Preprints/MedranoThomasRouse2021PNASpre.pdf">[pdf]</a>
 </p>
 
+<!-- <p>
+R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, R. D. Gregg, "Real-Time Phase and Task Estimation for Controlling a Powered Ankle Exoskeleton on Extremely Uneven Terrain," <i>(In Preparation)</i>. <a href="Preprints/MedranoThomasRouseGregg2021TROpre.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=xmJwKG_eP6U">[YouTube]</a>
+</p> -->
+
+<!-- <p>
+J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, "Task-Invariant Passivity-Based Control of a Knee-Ankle Exoskeleton over the Primary Activities of Daily Life," <i>(In Preparation)</i>. <a href="Preprints/LinDivekarThomasGregg2021pre.pdf">[pdf]</a>
+</p> -->
+
 <p>
-N. Brissoneau, B. He, <b>G. C. Thomas</b>, and L. Sentis, “Biologically-Inspired Impedance
-Control with Hysteretic Damping,” <i>IEEE Control Systems Letters</i>, vol. 5, no. 5, pp. 1717-1722,
+N. Brissonneau, B. He, <b>G. C. Thomas</b>, and L. Sentis, "Biologically-Inspired Impedance
+Control with Hysteretic Damping," <i>IEEE Control Systems Letters</i>, vol. 5, no. 5, pp. 1717-1722,
 Nov. 2021. (early access) <a href="https://ieeexplore.ieee.org/document/9291396">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/BrissonneauHeThomasSentis2020LCSSpre.pdf">[pdf]</a>
 </p>
 
 <p>
 B. He, H. Huang, <b>G. C. Thomas</b>, and L. Sentis, "A Complex Stiffness Human Impedance Model with Customizable Exoskeleton Control," <i>IEEE Transactions on Neural Systems and Rehabilitation Engineering</i>, vol. 28, no. 11, pp. 2468-2477, Nov. 2020. <a href="https://arxiv.org/abs/2009.12446">[ArXiv]</a> <a href="https://ieeexplore.ieee.org/document/9207922">[IEEE]</a>
+</p>
+
+<p>
+<b>G. C. Thomas</b>, and L. Sentis, "Quadric Inclusion Programs: an LMI Approach to H[infinity]-Model Identification," <i>IEEE Transactions on Automatic Control</i>, vol. 64, no. 10, pp. 4229-4236, Oct. 2019. <a href="https://doi.org/10.1109/TAC.2019.2897886">[doi]</a> <a href="https://ieeexplore.ieee.org/document/8636188">[IEEE]</a> <a href="https://codeocean.com/capsule/7861079/tree/v1">[CodeOcean]</a> <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a> 
 </p>
 
 <p>
@@ -96,10 +109,11 @@ T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Eng
 <h3>Conference</h3>
 
 <p>
-<b>G. C. Thomas</b>, J. M. Coholich, and L. Sentis. "Compliance Shaping for Control of Strength Amplification Exoskeletons with Elastic Cuffs." Presented at <i>The 2019 IEEE/ASME International Conference on Advanced Intelligent Mechatronics</i>, Hong Kong, China, pp. 1199-1206. IEEE, 2019.
-<a href="https://ieeexplore.ieee.org/document/8868484">[IEEE]</a>
-<!-- <a href="bib/gray.bib.html#ThomasCoholichSentis2019pre">[.bib]</a> -->
-<a href="https://arxiv.org/abs/1903.09673">[ArXiv]</a>
+<b>G. C. Thomas</b>, R. D. Gregg, "An Energy Shaping Exoskeleton Controller for Human Strength Amplification," <i>2021 IEEE Conference on Decision and Control (accepted)</i> <a href="Preprints/ThomasGregg2021CDCpre.pdf">[pdf]</a>
+</p>
+
+<p>
+E. Bolívar-Nieto, <b>G. C. Thomas</b>, E. Rouse, R. D. Gregg, "Convex Optimization for Spring Design in Series Elastic Actuators: From Theory to Practice," <i>2021 IEEE/RSJ International Conference on Intelligent Robotics and Systems (accepted)</i> <a href="https://web.eecs.umich.edu/locolab/documents/BolivarGregg-IROS2021.pdf">[pdf]</a>
 </p>
 
 <p>
@@ -116,6 +130,14 @@ B. He, <b>G. C. Thomas</b>, and L. Sentis. "Robust Estimator-Based Safety Verifi
 H. Huang, H. Cappel, <b>G. C. Thomas</b>, and L. Sentis. "Adaptive Compliance Shaping with Human Impedance Estimation." In <i>The 2020 American Control Conference</i>, pp. 3419-3424.
 <a href="https://arxiv.org/abs/1910.12902">[ArXiv]</a> <a href="https://ieeexplore.ieee.org/document/9147875">[IEEE]</a>
 </p>
+
+<p>
+<b>G. C. Thomas</b>, J. M. Coholich, and L. Sentis. "Compliance Shaping for Control of Strength Amplification Exoskeletons with Elastic Cuffs." Presented at <i>The 2019 IEEE/ASME International Conference on Advanced Intelligent Mechatronics</i>, Hong Kong, China, pp. 1199-1206. IEEE, 2019.
+<a href="https://ieeexplore.ieee.org/document/8868484">[IEEE]</a>
+<!-- <a href="bib/gray.bib.html#ThomasCoholichSentis2019pre">[.bib]</a> -->
+<a href="https://arxiv.org/abs/1903.09673">[ArXiv]</a>
+</p>
+
 
 <p>
 B. He, H. Huang, <b>G. C. Thomas</b>, and L. Sentis. "Complex Stiffness Model of Physical Human-Robot Interaction: Implications for Control of Performance Augmentation Exoskeletons." In <i>The 2019 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>,  Macau, China, pp. 6748-6755. IEEE, 2019.
@@ -200,9 +222,24 @@ I. Olaru, C. Schmidt-Wetekam, N. Payton, <b>G. C. Thomas</b>, J. Godowski, J. Pr
 
 <h3>Poster</h3>
 
+<p>
+<b>G. C. Thomas</b>, and E. Rouse, "Stiffening Cantilever-Disk Springs for the OSL," at <i>Dynamic Walking</i>, 2021 <a href="Preprints/ThomasRouse2021DWAbstract.pdf">[abstract]</a>
+</p>
 
 <p>
-R. Medrano, <b>G. C. Thomas</b>, and E. Rouse, "Quantifying Perception of Metabolic Changes from Exoskeleton Assistance," at <i>Dynamic Walking</i>, May 2020 <a href="https://www.seas.upenn.edu/~posa/DynamicWalking2020/612-889-1-RV.pdf">[pdf]</a>
+R. L. Medrano, <b>G. C. Thomas</b>, and E. Rouse, "Measuring the Just Noticeable Difference of Metabolic Rate with Exoskeleton Assistance," at <i>Dynamic Walking</i>, 2021 <a href="Preprints/MedranoThomasRouse2021DWAbstract.pdf">[abstract]</a>
+</p>
+
+<p>
+J. A. Montes Pérez, <b>G. C. Thomas</b>, and R. D. Gregg, "Low-Dimensional Individualized Continuous-Task Joint Kinematic Modelling," at <i>Dynamic Walking</i>, 2021 <a href="Preprints/MontesperezThomasGregg2021DWAbstract.pdf">[abstract]</a>
+</p>
+
+<p>
+<b>G. C. Thomas</b>, J. Lin, N. Divekar, C. Nestler, R. D. Gregg, "Task-Invariant Assistance using Backdrivable, Powered Orthoses," at <a href="https://www.nichd.nih.gov/about/meetings/2020/101520">NIH Rehabilitation Research 2020: Envisioning a Functional Future</a>, October 2020 <a href="Preprints/ThomasLinDivekarNeslerGreggREHABPoster2020.pdf">[poster]</a>
+</p>
+
+<p>
+R. L. Medrano, <b>G. C. Thomas</b>, and E. Rouse, "Quantifying Perception of Metabolic Changes from Exoskeleton Assistance," at <i>Dynamic Walking</i>, May 2020 <a href="https://www.seas.upenn.edu/~posa/DynamicWalking2020/612-889-1-RV.pdf">[pdf]</a>
 </p>
 
 <p>
