--- a/publications.html
+++ b/publications.html
@@ -60,8 +60,7 @@
 </p>
 
 <p>
-R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics (Early Access)</i>, doi: 10.1109/TMRB.2021.3098920 <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a>
-</p> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
+R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics (Early Access)</i>, doi: 10.1109/TMRB.2021.3098920 <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
 </p>
 
 <p>
