Frontiers paper accepted!

--- a/publications.html
+++ b/publications.html
@@ -64,8 +64,7 @@ R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exos
 </p>
 
 <p>
-<b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "An Amplification Shaping Framework for Exoskeletal Human Strength Augmentation," <i>(Under Review)</i> <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a>
-</p>
+<b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "An Amplification Shaping Framework for Exoskeletal Human Strength Augmentation," <i>Frontiers in Robotics and AI (Accepted)</i> <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a> <a href="https://www.frontiersin.org/articles/10.3389/frobt.2021.720231">[Frontiers]</a> </p>
 
 <p>
 R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, "Can humans perceive the metabolic benefit provided by augmentative exoskeletons?" <i>(Under Review)</i> <a href="Preprints/MedranoThomasRouse2021PNASpre.pdf">[pdf]</a>
